src/test/deca/context/valid/provided/TestEquals.deca
//equals and not equals
{
boolean bool = (1==2);
if (bool){
    println("booom");
}
}