src/test/deca/context/invalid/provided/test_print_condition.deca
//Resultats :
//Erreur contextuelle
//Ligne 6 : Print only accepts strings, ints and floats
{
    boolean zero = false;
    println(zero);
}